--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "aws-cdk": "1.91.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint": "^7.20.0",
     "husky": "^5.0.9",
     "jest": "^26.4.2",
     "lint-staged": "^10.5.4",
@@ -34,6 +34,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
     "source-map-support": "^0.5.16"
   },
