Lambda, but without external dependencies

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.91.0",
+    "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "aws-cdk": "1.91.0",
@@ -34,9 +36,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.91.0",
     "@aws-cdk/aws-dynamodb": "^1.91.0",
+    "@aws-cdk/aws-lambda": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
-    "source-map-support": "^0.5.16"
+    "aws-sdk": "^2.852.0",
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   },
   "husky": {
     "hooks": {
