--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
     "aws-sdk": "^2.852.0",
+    "cdk-watchful": "^0.5.94",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.2"
   }
